--- a/client/src/styles/login-signup.css
+++ b/client/src/styles/login-signup.css
@@ -43,7 +43,6 @@
     }
   }
 
-
   .user_registered-login,
   .user_unregistered-signup {
     background-color: transparent; 
@@ -75,11 +74,16 @@
     background-color: transparent;
   }
 
-  .forms_field-input:-webkit-autofill{
-    -webkit-box-shadow: 0 0 0 1000px rgb(70, 70, 65) inset !important;
+  .error-bar {
+    border-bottom: 1px solid red;
   }
-  
-  .forms_field-input:focus ~ .labels {
+
+  .forms_field-input:-webkit-autofill{
+    -webkit-box-shadow: 0 0 0 1000px beige inset ;
+  }
+
+  .forms_field-input:focus ~ .labels,
+  .forms_field-input:valid ~ .labels{
     top: -14px;
     font-size: 12px;
     color: var(--black);
@@ -118,6 +122,8 @@
     display: block;
     width: 100%;
   }
+
+  
   
   .bar:before {
     content: '';
