--- a/client/src/styles/login-signup.css
+++ b/client/src/styles/login-signup.css
@@ -43,18 +43,18 @@
     }
   }
 
-  button {
+  .main-btn {
     background-color: transparent; 
     transition: all .2s ease-in-out; 
   }
 
-  button:active,
+  .main-btn:active,
   input[type="submit"]:active {
       transform: scale(0.97);
       transition: transform 0.05s ease-in-out;
   }
 
-  button:hover{
+  .main-btn:hover{
     color: var(--dark-golden);
     background-color: rgb(245, 245, 220);
     box-shadow: 0px 0px 15px 1px rgb(212, 175, 55, 0.75) ;
