--- a/client/src/index.css
+++ b/client/src/index.css
@@ -82,3 +82,7 @@ body{
 .big-shadow{
     box-shadow: 0px 0px 50px 3px var(--black);
 }
+
+.white-shadow{
+    box-shadow: 0px 0px 30px -10px var(--beige);
+}
