--- a/client/src/index.css
+++ b/client/src/index.css
@@ -62,6 +62,10 @@ body{
     height: 100%;
 }
 
+button {
+    cursor: pointer;
+}
+
 .raleway{
     font-family: 'Raleway', serif !important;  
 }
@@ -86,3 +90,7 @@ body{
 .white-shadow{
     box-shadow: 0px 0px 30px -10px var(--beige);
 }
+
+.forms_field-input:-webkit-autofill{
+    -webkit-box-shadow: 0 0 0 1000px beige inset ;
+  }
