--- a/client/src/index.css
+++ b/client/src/index.css
@@ -87,6 +87,10 @@ button {
     box-shadow: 0px 0px 50px 3px var(--black);
 }
 
+.normal-shadow{
+    box-shadow: var( --black-shadow: 0px 0px 20px 0px rgb(0, 0, 0));
+}
+
 .white-shadow{
     box-shadow: 0px 0px 30px -10px var(--beige);
 }
