--- a/client/src/index.css
+++ b/client/src/index.css
@@ -42,7 +42,7 @@
 	 --btn-shadow: 0px 0px 20px -5px var(--golden);
      --btn-shadow-2:  0px 0px 20px 2px var(--golden);
      --white-shadow: 0px 0px 20px 0px rgba(255, 255, 255, 0.47);
-     --black-shadow: 0px 0px 20px 0px rgb(0, 0, 0);
+     --black-shadow: 0px 0px 20px -5px rgb(0, 0, 0);
      --bg-radial-gradient:radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
 	 --shine-degree: 120deg;
 	 --shine-color: rgba(255, 255, 255, 0.2);
@@ -87,8 +87,8 @@ button {
     box-shadow: 0px 0px 50px 3px var(--black);
 }
 
-.normal-shadow{
-    box-shadow: var( --black-shadow: 0px 0px 20px 0px rgb(0, 0, 0));
+.normal-shadow:hover{
+    box-shadow: var( --black-shadow);
 }
 
 .white-shadow{
