--- a/client/src/components/nav/nav.css
+++ b/client/src/components/nav/nav.css
@@ -15,12 +15,21 @@ nav{
 }
 
 
+.navbar-toggler-icon {
+    color: rgb(245, 245, 220);
+  }
+    
+@media (max-width: 990px){
 
-@media (max-width: 991px){
-    .sidebar{
-        background-color: rgba(255, 255, 255, 0.15);
+    .offcanvas{
+        background-color: rgba(0, 0, 0, 0.5) !important;
         -webkit-backdrop-filter: blur(5px);  
         backdrop-filter: blur(5px);
+        box-shadow: 0px 0px 50px 8px var(--black);
+    }
+
+    .smaller{
+        display: none !important;
     }
 
     .logo {
