--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,6 +17,7 @@
     font-family: 'Cinzel Decorative', serif;  
     scroll-behavior: smooth;
     -webkit-tap-highlight-color: transparent;
+    
     /*border: red 1px solid;  */
 }
   
@@ -60,6 +61,7 @@ body{
     background-attachment: fixed;
     overflow-x: hidden;
     height: 100vh;
+    min-width:min-content;
 }
 
 button {
@@ -105,9 +107,13 @@ button {
 
 .ql-container{
     background-color: beige;
+	border-radius: 0.375rem; 
 }
 
 .ql-toolbar{
     background: beige;
+    border-radius: 0.375rem; 
+    margin-bottom: .5em;
+
 }
 
