--- a/client/src/styles/login-signup.css
+++ b/client/src/styles/login-signup.css
@@ -52,7 +52,7 @@
 
   .main-btn:hover{
     color: var(--dark-golden);
-    background-color: rgba(245, 245, 220,0.90);
+    @apply bg-yellow-50;
     box-shadow: 0px 0px 15px 1px rgb(212, 175, 55, 0.75) ;
   }
 
