--- a/client/src/index.css
+++ b/client/src/index.css
@@ -117,3 +117,33 @@ button {
 
 }
 
+
+
+.post-content p{
+    margin-bottom: .5rem;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 300;
+}
+
+.post-content h1 {
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin: 1.5rem 0;
+  }
+  
+  .post-content h2 {
+    font-size: 1.4rem;
+    margin: 1.5rem 0;
+  }
+  
+  .post-content a {
+    text-decoration: none;
+    font-family: 'Raleway', sans-serif;
+    transition: all 150ms;
+  }
+  
+  .post-content a:hover {
+    text-decoration: underline;    
+    color: var(--golden);
+
+  }
