--- a/client/src/styles/nav.css
+++ b/client/src/styles/nav.css
@@ -3,24 +3,21 @@
 }
 
 .main-nav.scrolled {
-    background-color: black;
-    transition: background-color 0.3s ease;
+    @apply max-h-20 bg-black;
+    box-shadow: 0px -2px 40px var(--golden); 
   }
   
-
-.nav-item{
-    position: relative;
-    text-transform: uppercase;
-    color: var(--beige);
-    letter-spacing: 0.100em;
-    font-size: clamp(14px, 0.8vw,2vw);    
-    overflow: hidden;
-    font-weight: 500;
-    transition: all 0.2s ease-in-out;
-    font-weight: bold;   
-    padding: 2.4rem 0rem; 
+.main-nav.scrolled .logo {
+    @apply max-h-20 py-1 transition-all ;
 }
 
+.main-nav.scrolled .nav-item{
+    @apply text-xs;
+}
+
+.nav-item{
+    @apply tracking-widest text-sm text-yellow-50 uppercase;
+}
 
 .navbar-toggler-icon {
     color: rgb(245, 245, 220);
