--- a/client/src/styles/nav.css
+++ b/client/src/styles/nav.css
@@ -4,7 +4,6 @@
 
 .main-nav.scrolled {
     @apply max-h-20 bg-neutral-950;
-    box-shadow: 0px -2px 40px var(--golden); 
   }
   
 .main-nav.scrolled .logo {
@@ -16,17 +15,14 @@
 }
 
 .nav-item{
-    @apply tracking-widest text-sm text-yellow-50 uppercase;
+    @apply tracking-widest text-sm text-yellow-50 uppercase max-md:hover:bg-black w-full;
 }
 
-.navbar-toggler-icon {
-    color: rgb(245, 245, 220);
-}
     
 @media (max-width: 990px){
 
     .offcanvas{
-        background-color: rgba(0, 0, 0, 0.7) !important;
+        background-color: rgba(0, 0, 0, 0.8) !important;
         -webkit-backdrop-filter: blur(4px);  
         backdrop-filter: blur(4px);
         box-shadow: 0px 0px 50px 8px var(--black);
@@ -36,7 +32,7 @@
         display: none !important;
     }
 
-    li.logo {
+    .disppear{
         display: none;
     }
 
